--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -890,9 +890,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "502517a2",
+   "metadata": {},
+   "source": [
+    "## 1. Data Ingestion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "33d22e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.document_loaders import PyPDFLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a4a9266e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d22e77",
+   "id": "e379178f",
    "metadata": {},
    "outputs": [],
    "source": []
